--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,6 +5,9 @@ FROM lmsysorg/sglang:${SGLANG_VERSION} AS sglang
 ARG SGLANG_VERSION
 ARG MEGATRON_COMMIT=main
 
+RUN apt update
+RUN apt install -y nvtop
+
 # TODO: change to pip install sglang-router after it has a new release
 RUN pip install sglang-router --force-reinstall
 RUN pip install ray[default]
@@ -26,6 +29,7 @@ RUN pip -v install --no-build-isolation git+https://github.com/NVIDIA/Transforme
 # flash attn
 # the newest version megatron supports is v2.7.4.post1
 RUN MAX_JOBS=64 pip -v install flash-attn==2.7.4.post1
+RUN pip install git+https://github.com/zhuzilin/pytorch-malloc.git
 
 WORKDIR /root/
 RUN git clone https://github.com/NVIDIA/Megatron-LM.git --recursive && \
