--- a/docker/Dockerfile.fp8
+++ b/docker/Dockerfile.fp8
@@ -18,8 +18,11 @@ RUN cd $BASE_DIR/sglang/
 RUN pip -v install --no-deps -e "python[all]"
 RUN cd sgl-kernel
 RUN make install-deps
+RUN pip install uv
+RUN make build
 
 # TODO: change to pip install sglang-router after it has a new release
+RUN pip install sgl_kernel
 RUN pip install sglang-router --force-reinstall
 RUN pip install ray[default]
 RUN pip install httpx[http2] wandb pylatexenc blobfile accelerate "mcp[cli]"
@@ -54,3 +57,46 @@ RUN slime pip install -e .
 # apply patch
 cd $BASE_DIR/sglang
 git apply /root/slime/docker/patch/sglang.patch
+
+####################
+# other deps
+####################
+RUN pip install compressed_tensors
+RUN pip install git+https://github.com/fzyzcjy/torch_memory_saver.git
+RUN pip install uninstall triton
+RUN pip install triton==3.3.0
+
+RUN pip install blobfile==3.0.0
+RUN pip install build
+RUN pip install compressed-tensors
+RUN pip install datasets
+RUN pip install fastapi
+RUN pip install hf_transfer
+RUN pip install huggingface_hub
+RUN pip install interegular
+RUN pip install llguidance>=0.7.11,<0.8.0
+RUN pip install modelscope
+RUN pip install msgspec
+RUN pip install ninja
+RUN pip install orjson
+RUN pip install outlines==0.1.11
+RUN pip install packaging
+RUN pip install partial_json_parser
+RUN pip install pillow
+RUN pip install prometheus-client>=0.20.0
+RUN pip install psutil
+RUN pip install pydantic
+RUN pip install pynvml
+RUN pip install pybase64
+RUN pip install python-multipart
+RUN pip install pyzmq>=25.1.2
+RUN pip install sentencepiece
+RUN pip install soundfile==0.13.1
+RUN pip install scipy
+RUN pip install torchao==0.9.0
+RUN pip install transformers==4.54.1
+RUN pip install timm==1.0.16
+RUN pip install uvicorn
+RUN pip install uvloop
+RUN pip install xgrammar==0.1.21
+RUN pip install compressed_tensors
