--- a/docker/Dockerfile.fp8
+++ b/docker/Dockerfile.fp8
@@ -38,7 +38,7 @@ RUN pip -v install --no-build-isolation \
 
 # megatron
 RUN cd /root/
-RUN git clone https://github.com/InfiXAI/Megatron-LM.git
+RUN git clone https://github.com/InfiXAI/Megatron-LM.git --branch v0.0.1-fp8
 RUN cd Megatron-LM/
 RUN slime pip install -e .
 
